Added the activity details

--- a/index.html
+++ b/index.html
@@ -317,14 +317,12 @@
     </div> -->
 
     <!-- PRODUCTS DETAILS SECTION -->
-    <div class="row padding block" id="details" style="background-color: #111111">
+    <div class="row block" id="details" style="background-color: #111111; padding-top: 50px; padding-bottom: 50px">
         <div class="container">
             <!-- COLUMN 1 -->
-            <div class="" style="text-align: center;">
-                <ul>
+            <div class="" style="text-align: center; margin-bottom: 25px;">
                     <!-- <li><img src="img/demo/logo.png"></li> -->
-                    <li><img src="img/shop/img_001.jpg"></li>    
-                </ul>    
+                    <img src="img/shop/img_002.jpg">   
                 
                 <!-- <p class="logo-type" style="margin-top: -11px;">Airsys</p> -->
             </div>
@@ -359,10 +357,27 @@
 
             <!-- COLUMN 4 -->
             <div class="column-width-four" style="text-align: center;">
-                <p class="sub-title-white" style="margin-bottom: 25px;">Adres</p>
+                <p class="sub-title-white" style="margin-bottom: 25px;">Handschoenen</p>
                 <ul>
-                    <li style="color: #fff;">Leuvensesteenweg 445</li>
-                    <li style="color: #fff;">3370 Boutersem</li>
+                    <li style="color: #fff;">Dunne handschoen</li>
+                    <li style="color: #fff;">Dikkere handschoen</li>
+                    <li style="color: #fff;">Nitril</li>
+                </ul>
+            </div>
+
+            <!-- COLUMN 4 -->
+            <div class="column-width-four" style="text-align: center;">
+                <p class="sub-title-white" style="margin-bottom: 25px;">Veiligheidsschoenen</p>
+                <ul>
+                    <li style="color: #fff;">CAT</li>
+                    <li style="color: #fff;">Diadora</li>
+                    <li style="color: #fff;">Abeba</li>
+                </ul>
+
+                <p class="sub-title-white" style="margin-bottom: 25px; margin-top: 75px;">Bedrukking</p>
+                <ul>
+                    <li style="color: #fff;">Op alle soorten textiel</li>
+                    <li style="color: #fff;">Promotiemateriaal</li>
                 </ul>
             </div>
 
