Changed the color of the details

--- a/index.html
+++ b/index.html
@@ -331,26 +331,26 @@
                 <p class="sub-title-white" style="margin-bottom: 25px;">Bedrijfskleding</p>
                 <ul>
                         <!--<li><h style="color:#FCB515; font-size: 25px">Werkkledij, bedrukking en borduren op alle textiel, beschermingsmateriaal</h2></li>-->
-                        <li style="color: #fff;">Projob</li>
-                        <li style="color: #fff;">Snickers</li>
-                        <li style="color: #fff;">Harvest</li>
-                        <li style="color: #fff;">Printer</li>
-                        <li style="color: #fff;">D.A.D</li>
-                        <li style="color: #fff;">Cottover</li>
-                        <li style="color: #fff;">Herock</li>
-                        <li style="color: #fff;">B&amp;C</li>
-                        <li style="color: #fff;">Gildan</li>
+                        <li style="color: #ccc;">Projob</li>
+                        <li style="color: #ccc;">Snickers</li>
+                        <li style="color: #ccc;">Harvest</li>
+                        <li style="color: #ccc;">Printer</li>
+                        <li style="color: #ccc;">D.A.D</li>
+                        <li style="color: #ccc;">Cottover</li>
+                        <li style="color: #ccc;">Herock</li>
+                        <li style="color: #ccc;">B&amp;C</li>
+                        <li style="color: #ccc;">Gildan</li>
                     </ul>
             </div>
             <!-- COLUMN 3 -->
             <div class="column-width-four" style="text-align: center;">
                 <p class="sub-title-white" style="margin-bottom: 25px;">Bescherming</p>
                 <ul>
-                        <li style="color: #fff;">Earcaps</li>
-                        <li style="color: #fff;">Maskers</li>
-                        <li style="color: #fff;">Helmen</li>
-                        <li style="color: #fff;">Veiligheidsbrillen</li>
-                        <li style="color: #fff;">Valbescherming</li>
+                        <li style="color: #ccc;">Earcaps</li>
+                        <li style="color: #ccc;">Maskers</li>
+                        <li style="color: #ccc;">Helmen</li>
+                        <li style="color: #ccc;">Veiligheidsbrillen</li>
+                        <li style="color: #ccc;">Valbescherming</li>
 
                     </ul>
             </div>
@@ -359,9 +359,9 @@
             <div class="column-width-four" style="text-align: center;">
                 <p class="sub-title-white" style="margin-bottom: 25px;">Handschoenen</p>
                 <ul>
-                    <li style="color: #fff;">Dunne handschoen</li>
-                    <li style="color: #fff;">Dikkere handschoen</li>
-                    <li style="color: #fff;">Nitril</li>
+                    <li style="color: #ccc;">Dunne handschoen</li>
+                    <li style="color: #ccc;">Dikkere handschoen</li>
+                    <li style="color: #ccc;">Nitril</li>
                 </ul>
             </div>
 
@@ -369,15 +369,15 @@
             <div class="column-width-four" style="text-align: center;">
                 <p class="sub-title-white" style="margin-bottom: 25px;">Veiligheidsschoenen</p>
                 <ul>
-                    <li style="color: #fff;">CAT</li>
-                    <li style="color: #fff;">Diadora</li>
-                    <li style="color: #fff;">Abeba</li>
+                    <li style="color: #ccc;">CAT</li>
+                    <li style="color: #ccc;">Diadora</li>
+                    <li style="color: #ccc;">Abeba</li>
                 </ul>
 
                 <p class="sub-title-white" style="margin-bottom: 25px; margin-top: 75px;">Bedrukking</p>
                 <ul>
-                    <li style="color: #fff;">Op alle soorten textiel</li>
-                    <li style="color: #fff;">Promotiemateriaal</li>
+                    <li style="color: #ccc;">Op alle soorten textiel</li>
+                    <li style="color: #ccc;">Promotiemateriaal</li>
                 </ul>
             </div>
 
