Added marquee options

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
            <div class="row" style="margin-top: -121px; overflow: hidden">
                
                <!-- <div class="otw_portfolio_manager-slider brands-slider" data-animation="slide"> -->
-                <div id="marquee" class="brands-slider marquee">  
+                <div id="marquee" class="brands-slider marquee" style="width: 100%">  
                         
                     <div class="sidebar-slider-full-width brands">
                         <div class="brand-item">
