Added catalogi header

--- a/index.html
+++ b/index.html
@@ -247,8 +247,10 @@
 
 
         <!-- SLIDER -->
-        <div class="row" style="margin-top: -121px; overflow: hidden">
+        <div class="row slider-wrapper" style="margin-top: -171px; overflow: hidden">
             <a class="btn-contact" data-scroll-target="#contact" data-menu="false" href="#">Contacteer ons</a>
+            <h2 style="margin-left: 17px">Catalogi</h2>
+
             <!-- <div class="otw_portfolio_manager-slider brands-slider" data-animation="slide"> -->
             <div id="marquee" class="brands-slider marquee" style="width: 100%">
 
