--- a/index.html
+++ b/index.html
@@ -249,19 +249,22 @@
         <!-- SLIDER -->
         <div class="row slider-wrapper" style="margin-top: -162px; overflow: hidden">
             <a class="btn-contact" data-scroll-target="#contact" data-menu="false" href="#">Contacteer ons</a>
-            <h2 style="margin-left: 17px">Catalogi</h2>
+            <h2 style="margin-left: 17px;width: 150px;float:  left;">Catalogi</h2>
+            <p style="color:  white; font-family:  'Montserrat-Regular'; margin: 0; ">Klik op icoon om een catalogus te bekijken</p>
 
             <!-- <div class="otw_portfolio_manager-slider brands-slider" data-animation="slide"> -->
             <div id="marquee" class="brands-slider marquee" style="width: 100%">
 
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                            <img src="./img/brands/snickers.jpg">
+                        <img src="./img/brands/snickers.jpg">
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
+                        <a target="_blank" href="./img/brands/cat_2018.pdf">
                             <img src="./img/brands/cat.jpg">
+                        </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
@@ -274,7 +277,9 @@
 
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
+                        <a target="_blank" href="https://www.utilitydiadora.com/pdf/CAT_2018_en.pdf">
                             <img src="./img/brands/diadora.jpg">
+                        </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
@@ -321,28 +326,30 @@
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                            <img src="./img/brands/printer-active.jpg">
+                        <img src="./img/brands/printer-active.jpg">
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                            <img src="./img/brands/bcpro.jpg">
+                        <img src="./img/brands/bcpro.jpg">
                     </div>
                 </div>
 
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
+                        <a target="_blank" href="./img/brands/gildan_2018.pdf">
                             <img src="./img/brands/gildan.jpg">
+                        </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                            <img src="./img/brands/kariban.jpg">
+                        <img src="./img/brands/kariban.jpg">
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                            <img src="./img/brands/russell.jpg">
+                        <img src="./img/brands/russell.jpg">
                     </div>
                 </div>
 
