Updated catalogi and deleted unused images

--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@
 
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
+                        <a target="_blank" href="https://partnerportal.hultaforsgroup.be/nl/page/448/catalogueslistes-de-prix-belgique-fr">
                         <img src="./img/brands/snickers.jpg">
+                        </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
@@ -280,14 +282,14 @@
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                        <a target="_blank" href="./img/brands/cat_2018.pdf">
+                        <a target="_blank" href="./catalogi/cat.pdf">
                             <img src="./img/brands/cat.jpg">
                         </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                        <a target="_blank" href="https://joom.ag/KXcL">
+                        <a target="_blank" href="https://view.joomag.com/projob-projob-2020-nl-eur/0854010001578492329?short">
                             <img src="./img/brands/projob.jpg">
                         </a>
                     </div>
@@ -295,56 +297,58 @@
 
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                        <a target="_blank" href="https://www.utilitydiadora.com/pdf/CAT_2018_en.pdf">
+                        <a target="_blank" href="./catalogi/diadora.pdf">
                             <img src="./img/brands/diadora.jpg">
                         </a>
                     </div>
                 </div>
-                <div class="sidebar-slider-full-width brands">
+                <!-- <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
                         <a target="_blank" href="https://issuu.com/herockhero/docs/herock_cataloog_2018_nl">
                             <img src="./img/brands/herock.jpg">
                         </a>
                     </div>
-                </div>
+                </div> -->
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                        <a target="_blank" href="https://joom.ag/PrGL">
+                        <a target="_blank" href="https://view.joomag.com/cottover-2020-cottover-2020-be-dutch/0021274001576221004?short">
                             <img src="./img/brands/cottover.jpg">
                         </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                        <a target="_blank" href="https://joom.ag/NcJW">
+                        <a target="_blank" href="https://www.texet.be/globalassets/texet-be/documents/2019-02-19-tulsa.pdf">
                             <img src="./img/brands/dad.jpg">
                         </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                        <a target="_blank" href="https://joom.ag/tpcL">
+                        <a target="_blank" href="https://view.joomag.com/james-harvest-sportswear-harvest-2020-benelux-dutch-withprice/0942315001578930836?short">
                             <img src="./img/brands/james-harvest.jpg">
                         </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                        <a target="_blank" href="https://joom.ag/DZQY">
+                        <a target="_blank" href="https://view.joomag.com/jharvest-frost-jharvestfrost-2020/0406033001581324236?short">
                             <img src="./img/brands/james-harvest-frost.jpg">
                         </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                        <a target="_blank" href="https://joom.ag/lBVL">
+                        <a target="_blank" href="https://view.joomag.com/macone-wear-at-work-macone-2019-dutch/0176887001548328422?short">
                             <img src="./img/brands/mac-one.jpg">
                         </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
                     <div class="brand-item">
-                        <img src="./img/brands/printer-active.jpg">
+                        <a target="_blank" href="https://view.joomag.com/printer-active-wear-printer-2020-benelux-dutch-withprice/0086365001578932145?short">
+                            <img src="./img/brands/printer-active.jpg">
+                        </a>
                     </div>
                 </div>
                 <div class="sidebar-slider-full-width brands">
